force-app/main/default/objects/Provider__c/Provider__c.object-meta.xml
<CustomObject>
<description>Medical and care team providers.</description>
<label>Provider</label>
<nameField>
<displayFormat></displayFormat>
<label>Provider Name</label>
<type>Text</type>
</nameField>
<pluralLabel>Providers</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>