force-app/main/default/objects/Provider__c/fields/External_Id__c.field-meta.xml
<CustomField>
<fullName>External_Id__c</fullName>
<label>External Id</label>
<type>Text</type>
<length>40</length>
<externalId>true</externalId>
</CustomField>