force-app/main/default/objects/Provider__c/fields/FHIR_Practitioner_Id__c.field-meta.xml
<CustomField>
    <fullName>FHIR_Practitioner_Id__c</fullName>
    <label>FHIR Practitioner ID</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>