force-app/main/default/objects/Provider__c/fields/Location__c.field-meta.xml
<CustomField>
<fullName>Location__c</fullName>
<label>Location</label>
<type>Text</type>
<length>120</length>
</CustomField>