force-app/main/default/objects/Provider__c/fields/Specialty__c.field-meta.xml
<CustomField>
<fullName>Specialty__c</fullName>
<label>Specialty</label>
<type>Text</type>
<required>true</required>
<length>80</length>
</CustomField>