force-app/main/default/objects/Provider__c/fields/Supported_Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>Supported_Appointment_Types__c</fullName>
    <label>Supported Appointment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New consult</fullName>
            </value>
            <value>
                <fullName>Diabetes follow-up</fullName>
            </value>
            <value>
                <fullName>Discovery consult</fullName>
            </value>
            <value>
                <fullName>CGM review</fullName>
            </value>
            <value>
                <fullName>90-day review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>